gcc/testsuite/rust/rustc/ui/issues/issue-40749.rs
fn main() {
    [0; ..10];
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
}

